--- a/.env.dev
+++ b/.env.dev
@@ -2,10 +2,10 @@
 # Exemple, si votre projet est dans le dossier "code/", il faudra écrire :
 # CHEMIN_BASE=code/
 # S'il est dans aucun dossier, vous écrirez "CHEMIN_BASE=/"
-CHEMIN_BASE=nh203
+CHEMIN_BASE=nh203/
 
 # A changer en fonction de votre configuration de phpmyadmin sur LE SERVEUR
-NOM_BDD=nh203
-SERVEUR_BDD=nassimhmr_203
+NOM_BDD=nassimhmr_sae203
+SERVEUR_BDD= mysql-nassimhmr.alwaysdata.net
 UTILISATEUR_BDD=nassimhmr
 MDP_BDD=Alwaysdata95
