--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
 # Les lignes de commentaires sont précédées par un croisillon (#). Inutile de les modifier.
 # Exemple, si votre projet est dans le dossier "sae/code/", il faudra écrire :
 # CHEMIN_BASE=sae/code/
-CHEMIN_BASE=
+CHEMIN_BASE=nh203/
 
 # A changer en fonction de votre configuration de phpmyadmin sur LE SERVEUR
-NOM_BDD=sae_203_db
-SERVEUR_BDD=
-UTILISATEUR_BDD=
-MDP_BDD=
+NOM_BDD=nassimhmr_sae203
+SERVEUR_BDD= mysql-nassimhmr.alwaysdata.net
+UTILISATEUR_BDD=nassimhmr
+MDP_BDD=Alwaysdata95
